--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,16 +33,15 @@
                             <span class="nav-link text-white">Hi, @User.Identity!.Name</span>
                         </li>
                         <li class="nav-item">
-                            <form asp-controller="Account" asp-action="LogoutPost" method="post" class="d-inline">
-                                @Html.AntiForgeryToken()
-                                <button class="btn btn-sm btn-outline-light ms-2">Logout</button>
-                            </form>
+                            <a class="btn btn-sm btn-outline-light ms-2" href="/Account/Logout">Logout</a>
                         </li>
                     }
                     else
                     {
-                        <li class="nav-item"><a class="nav-link text-white" asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="/Account/Login">Login</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="/Account/Register">Sign up</a></li>
                     }
+
                 </ul>
 
             </div>
