--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <!-- 🔹 Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold text-white" asp-controller="Borrow" asp-action="Index">
+            <a class="navbar-brand fw-bold text-white" asp-controller="MyLoans" asp-action="Index">
                 📚 Library System
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link text-white" asp-controller="Books" asp-action="Index">Books</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" asp-controller="Borrow" asp-action="Index">Borrow</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" asp-controller="MyLoans" asp-action="Index">My Loans</a></li>
 
                     @if (User.Identity?.IsAuthenticated ?? false)
                     {
